# projectaria_tools

./: 404.html  index.html  lunr-index-1701130726057.json  lunr-index-1701193263222.json  lunr-index-1701366664198.json  lunr-index-1701385903693.json  lunr-index-1701398458899.json  lunr-index-1701714318871.json  lunr-index-1701714672054.json  lunr-index-1701732674961.json  lunr-index-1701892395005.json  lunr-index-1701899154754.json  lunr-index-1702062512218.json  lunr-index-1702330334267.json  lunr-index-1702331144032.json  lunr-index-1702343187459.json  lunr-index-1702365981494.json  lunr-index-1702397859875.json  lunr-index-1702402400018.json  lunr-index-1702404984531.json  lunr-index-1702419510035.json  lunr-index-1702494220926.json  lunr-index-1702515629847.json  lunr-index-1702923069403.json  lunr-index-1702926155109.json  lunr-index-1702927317246.json  lunr-index-1702939696452.json  lunr-index-1703031225366.json  lunr-index-1703223035512.json  lunr-index-1703711221778.json  lunr-index-1703734508309.json  lunr-index-1703814675057.json  lunr-index-1704311582228.json  lunr-index-1704312800686.json  lunr-index-1704318354022.json  lunr-index-1704390751106.json  lunr-index-1704398061965.json  lunr-index-1704835661072.json  lunr-index-1704845635411.json  lunr-index-1704925154755.json  (+247 more)
docs/: attribution_citation.html  (+8 more)
tools/vrs_mutation/: CMakeLists.txt  EgoBlurImageMutator.h  ImageMutationFilterCopier.h  ImageUndistortionMutator.h  README.md  main.cpp
tools/vrs_mutation/data/: egoblur_test.vrs
tools/vrs_mutation/notebooks/: cpp_pytorch_colab_notebook.ipynb
(+638 files in other folders)
